# rubot

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: build.yml
src/: agent.rs  config.rs  main.rs  markdown.rs  memory.rs  personality.rs  planner.rs  scheduler.rs  subagent.rs  ui.rs
src/agent/: mod.rs  plan.rs  runtime.rs  session.rs  stall.rs  tests.rs  utils.rs
src/channel/: mod.rs  tg.rs  wechat.rs
src/context/: cleaner.rs
src/llm/: client.rs  types.rs
src/memory/: index.rs  layer.rs  mod.rs  search.rs  store.rs
src/planner/: chain.rs  executor.rs  mod.rs
src/reflector/: error_book.rs  matcher.rs  mod.rs
src/skill/: mod.rs  parser.rs  registry.rs  types.rs
src/state/: manager.rs
src/telegram/: download.rs  formatting.rs  handler.rs  mod.rs
src/tools/: browser.rs  code_exec.rs  file_ops.rs  latex_pdf.rs  md_tool.rs  mod.rs  path_remember.rs  permission.rs  playwright.rs  registry.rs  skill_create.rs  skill_get.rs  tool_create.rs  tool_forge.rs  tool_list.rs  user_tool_manifest.rs  user_tool_types.rs  web_fetch.rs  web_search.rs
src/workspace/: git.rs
