[package]
name = "rubot"
version = "0.1.0"
edition = "2021"
description = "Minimal autonomous agent: LLM + core tools + flat-file memory"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
rustyline = "15"
html2text = "0.13"
scraper = "0.22"
async-trait = "0.1"
dotenvy = "0.15"
data-encoding = "2.10.0"
tar = "0.4"
flate2 = "1"
